--- a/package.json
+++ b/package.json
@@ -4,24 +4,30 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
+    "watch": "nodemon"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/leyeto/eredbook-mongodb-server.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/leyeto/eredbook-mongodb-server/issues"
+  },
+  "homepage": "https://github.com/leyeto/eredbook-mongodb-server#readme",
+  "type": "module",
   "dependencies": {
-    "cors": "^2.8.5",
+    "@apollo/server": "^4.7.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-graphql": "^0.12.0",
     "graphql": "^16.6.0",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.2.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "dotenv": "^16.0.3",
-    "nodemon": "^2.0.22",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "nodemon": "^2.0.22"
   }
 }
